--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,175 @@
+@import url('https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300&family=Zilla+Slab:wght@300&display=swap');
 
 
-/*
-.box1{
-    width: 400px;
-    height: 400px
-    border: 5px solid black;
-    margin: 20px auto;
+
+header{
+  background-color: #2A0800;
+  display: grid;
+  grid-template-columns: 150px auto;
+  padding: 0px 0px;
+  margin-top: 0px;
 }
+body{
+    background-color: #F4DBD8;
+    margin: 0;
+    padding: 0;
+  }
+nav{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+nav a {
+  color: #BEA8A7;
+  text-align: center;
+  text-decoration: none;
+  padding: 30px;
+  padding-top: 5px;
+}
+nav a:hover{
+  color: whitesmoke;
+}
+#logo_link {
+  padding-top: 5px;
+  justify-self: center;
+  align-self: center;
+  padding-top: 5px;
+}
+.logo{
+  width: 80px;
+  padding: 15px 15px;
+  /*margin-top: */
+}
+#GamingBackround{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -px;
+  }
+  #gaming-msg{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 250px;
+  }
+  #gaming-box{
+    grid-column: 1/5;
+    grid-row: 1/3;
+    z-index: -1;
+    width: 100%;
+  }
+  #gaming-msg h1{
+    font-size: 5em;
+  }
+  #gaming-msg h1{
+    text-align: center;
+    color: white;
+    font-family: 'Zilla Slab'
+  }
+  #hero-img{
+    width: 100%;
+  }
+  #content{
+    max-width: 1600px;
+    margin: 0 auto;
+    text-align: center;
+  }
+  #background{
+    height: 725px;
+  }
+
+  /*about me stuff  */
+  .aboutme-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 3fr 1fr 1fr 3fr 1fr 1fr ;
+    justify-items: center;
+    grid-row-gap: 2em;
+    max-width: 1400px;
+    margin: 0 auto;
+  }
+  .aboutme-img {
+    grid-column: 2/5;
+    grid-row: 2/5;
+    width: 100%;
+    box-shadow: 5px 5px 10px #6f7364;
+  }
+  .aboutme-text {
+    grid-column: 4/7;
+    grid-row: 3/4;
+    background-color: #775144;
+    height: 250px;
+    padding: 35px;
+    line-height: 1.5em;
+    box-shadow: 5px 5px 10px #6f7364;
+    font-family: 'Hind Siliguri';
+  }
+
+  /* Page navagators */
+.Page1-box{
+    width: 200px;
+    height: 150px;
+    border: 5px solid black;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #775144;
+    grid-row: 7/7;
+    grid-column: 3/4;
+    margin-top: 200px;
+
+}
+.Page2-box{
+    width: 200px;
+    height: 150px;
+    border: 5px solid black;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #775144;
+    grid-row: 7/7;
+    grid-column: 6/7;
+    margin-top: 200px;
+
+}
+.Page1{
+    font-size: 2em;
+    font-family: 'Zilla Slab';
+    text-decoration-color: blanchedalmond;
+    color: white;
+}
+.Page2{
+    font-size: 2em;
+    font-family: 'Zilla Slab';
+    text-decoration-color: blanchedalmond;
+    color: white;
+}
+
+
+  footer{
+    background-color: #2A0800;
+    text-align: center;
+    padding: 25px 50px;
+    margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    }
+    footer h3{
+      color: #BEA8A7;
+      text-decoration: underline;
+    }
+    footer a{
+      color: #BEA8A7;
+      text-decoration: none;
+    }
+    footer a:hover{
+      color:white;
+      text-decoration: none;
+    }
+    footer .social img{
+      padding-top: 15px;
+    }
+    .social{
+      text-decoration: none;
+    }
+  
