--- a/styles/style.css
+++ b/styles/style.css
@@ -146,6 +146,205 @@ nav a:hover{
     color: white;
 }
 
+/* pages 1 and 2 boxes CSS*/
+
+
+.page1-title{
+  text-decoration: underline dotted;
+  font-size: 4em;
+  font-family: 'Zilla Slab'
+}
+
+/*  box 1  */
+.box1{
+  width: 800px;
+  height: 260px;
+  border: 5px solid black;
+  margin: 20px auto;
+  background-color:#775144 ;
+}
+.boximage1{
+position: relative;
+right: 260px;
+top: 5px
+}
+.boxtitle1{
+  position: relative;
+  bottom: 245px;
+  left: 135px;
+  font-family: 'Zilla Slab';
+  font-size: 2em;
+  text-decoration: underline dotted;
+}
+.boxdescription1{
+  width: 450px;
+  height: 180;
+  position: relative;
+  bottom: 220px;
+  left: 310px
+  
+}
+.boxdescription1{
+  font-size: 1.1em;
+  font-family: 'Hind Siliguri';
+}
+.boxdemo1{
+  position: relative;
+  border: 5px solid black;
+  border-radius: 20px;
+  font-family: 'Hind Siliguri';
+  bottom: 200px;
+  left: 335px;
+  width: 400px
+  
+}
+.boxdemo1{
+  background-color:red ;
+}
+
+/*  box 2  */
+.box2{
+  width: 800px;
+  height: 260px;
+  border: 5px solid black;
+  margin: 20px auto;
+  background-color:#775144 ;
+}
+.boximage2{
+position: relative;
+right: 260px;
+top: 5px
+}
+.boxtitle2{
+  position: relative;
+  bottom: 245px;
+  left: 135px;
+  font-family: 'Zilla Slab';
+  font-size: 2em;
+  text-decoration: underline dotted;
+}
+.boxdescription2{
+  width: 450px;
+  height: 180;
+  position: relative;
+  bottom: 220px;
+  left: 310px
+  
+}
+.boxdescription2{
+  font-size: 1.1em;
+  font-family: 'Hind Siliguri';
+}
+.boxdemo2{
+  position: relative;
+  border: 5px solid black;
+  border-radius: 20px;
+  font-family: 'Hind Siliguri';
+  bottom: 200px;
+  left: 335px;
+  width: 400px
+  
+}
+.boxdemo2{
+  background-color:red ;
+}
+
+/*  box 3  */
+.box3{
+  width: 800px;
+  height: 260px;
+  border: 5px solid black;
+  margin: 20px auto;
+  background-color:#775144 ;
+}
+.boximage3{
+position: relative;
+right: 260px;
+top: 45px
+}
+.boxtitle3{
+  position: relative;
+  bottom: 165px;
+  left: 135px;
+  font-family: 'Zilla Slab';
+  font-size: 2em;
+  text-decoration: underline dotted;
+}
+.boxdescription3{
+  width: 450px;
+  height: 180;
+  position: relative;
+  bottom: 140px;
+  left: 310px
+  
+}
+.boxdescription3{
+  font-size: 1.1em;
+  font-family: 'Hind Siliguri';
+}
+.boxdemo3{
+  position: relative;
+  border: 5px solid black;
+  border-radius: 20px;
+  font-family: 'Hind Siliguri';
+  bottom: 115px;
+  left: 335px;
+  width: 400px
+  
+}
+.boxdemo3{
+  background-color:red ;
+}
+
+/*  box 4  */
+.box4{
+  width: 800px;
+  height: 260px;
+  border: 5px solid black;
+  margin: 20px auto;
+  background-color:#775144 ;
+}
+.boximage4{
+position: relative;
+right: 260px;
+top: 45px
+}
+.boxtitle4{
+  position: relative;
+  bottom: 175px;
+  left: 135px;
+  font-family: 'Zilla Slab';
+  font-size: 2em;
+  text-decoration: underline dotted;
+}
+.boxdescription4{
+  width: 450px;
+  height: 180;
+  position: relative;
+  bottom: 150px;
+  left: 310px
+  
+}
+.boxdescription4{
+  font-size: 1.1em;
+  font-family: 'Hind Siliguri';
+}
+.boxdemo4{
+  position: relative;
+  border: 5px solid black;
+  border-radius: 20px;
+  font-family: 'Hind Siliguri';
+  bottom: 135px;
+  left: 335px;
+  width: 400px
+  
+}
+.boxdemo4{
+  background-color:red ;
+}
+
+
+
 
   footer{
     background-color: #2A0800;
