Page 2 and contact us completed. All images optomized and such.

--- a/styles/style.css
+++ b/styles/style.css
@@ -197,9 +197,11 @@ top: 5px
   left: 335px;
   width: 400px
   
+  
 }
 .boxdemo1{
   background-color:red ;
+  
 }
 
 /*  box 2  */
@@ -343,7 +345,214 @@ top: 45px
   background-color:red ;
 }
 
+/*  box 5  */
+.box5{
+  width: 800px;
+  height: 260px;
+  border: 5px solid black;
+  margin: 20px auto;
+  background-color:#775144 ;
+}
+.boximage5{
+position: relative;
+right: 260px;
+top: 45px
+}
+.boxtitle5{
+  position: relative;
+  bottom: 175px;
+  left: 135px;
+  font-family: 'Zilla Slab';
+  font-size: 2em;
+  text-decoration: underline dotted;
+}
+.boxdescription5{
+  width: 450px;
+  height: 180;
+  position: relative;
+  bottom: 150px;
+  left: 310px
+  
+}
+.boxdescription5{
+  font-size: 1.1em;
+  font-family: 'Hind Siliguri';
+}
+.boxdemo5{
+  position: relative;
+  border: 5px solid black;
+  border-radius: 20px;
+  font-family: 'Hind Siliguri';
+  bottom: 135px;
+  left: 335px;
+  width: 400px
+  
+}
+.boxdemo5{
+  background-color:red ;
+}
 
+/*  box 6  */
+.box6{
+  width: 800px;
+  height: 260px;
+  border: 5px solid black;
+  margin: 20px auto;
+  background-color:#775144 ;
+}
+.boximage6{
+position: relative;
+right: 260px;
+top: 45px
+}
+.boxtitle6{
+  position: relative;
+  bottom: 165px;
+  left: 135px;
+  font-family: 'Zilla Slab';
+  font-size: 2em;
+  text-decoration: underline dotted;
+}
+.boxdescription6{
+  width: 450px;
+  height: 180;
+  position: relative;
+  bottom: 150px;
+  left: 310px
+  
+}
+.boxdescription6{
+  font-size: 1.1em;
+  font-family: 'Hind Siliguri';
+}
+.boxdemo6{
+  position: relative;
+  border: 5px solid black;
+  border-radius: 20px;
+  font-family: 'Hind Siliguri';
+  bottom: 135px;
+  left: 335px;
+  width: 400px
+  
+}
+.boxdemo6{
+  background-color:red ;
+}
+
+/*  box 7  */
+.box7{
+  width: 800px;
+  height: 260px;
+  border: 5px solid black;
+  margin: 20px auto;
+  background-color:#775144 ;
+}
+.boximage7{
+position: relative;
+right: 260px;
+top: 45px
+}
+.boxtitle7{
+  position: relative;
+  bottom: 165px;
+  left: 135px;
+  font-family: 'Zilla Slab';
+  font-size: 2em;
+  text-decoration: underline dotted;
+}
+.boxdescription7{
+  width: 450px;
+  height: 180;
+  position: relative;
+  bottom: 150px;
+  left: 310px
+  
+}
+.boxdescription7{
+  font-size: 1.1em;
+  font-family: 'Hind Siliguri';
+}
+.boxdemo7{
+  position: relative;
+  border: 5px solid black;
+  border-radius: 20px;
+  font-family: 'Hind Siliguri';
+  bottom: 125px;
+  left: 335px;
+  width: 400px
+  
+}
+.boxdemo7{
+  background-color:red ;
+}
+.demo{
+  color:white;
+}
+
+/* Contact us   */
+#feedback {
+  background-color: antiquewhite;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: .5em;
+  display: none;       
+}
+.moveDown {
+  margin-top: 3em;
+}
+
+form {
+  margin: 0 auto;
+  margin-top: 150px;
+  width: 500px;
+  padding: 1em;
+  border: 6px solid black;
+  border-radius: 1em;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+form li + li {
+  margin-top: 1em;
+}
+
+label {
+  display: inline-block;
+  width: 90px;
+  text-align: right;
+}
+
+input,
+textarea {
+  font: 1em sans-serif;
+  width: 300px;
+  box-sizing: border-box;
+  border: 2px solid #999;
+}
+
+input:focus,
+textarea:focus {
+  border-color: #000;
+}
+
+textarea {
+  vertical-align: top;
+  height: 5em;
+}
+
+.button {
+  padding-left: 90px;
+}
+
+button {
+  margin-left: .5em;
+}
 
 
   footer{
