--- a/styles/style.css
+++ b/styles/style.css
@@ -93,6 +93,10 @@ nav a:hover{
     box-shadow: 5px 5px 10px #6f7364;
     margin-top: 100px;
   }
+  .aboutme-img:hover {
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+  }
   .aboutme-text {
     grid-column: 4/7;
     grid-row: 3/4;
